# ConstellationSim

./: .gitignore  CMakeLists.txt  README.md
analysis/: reflect_orbital_analysis.ipynb  sso_j2_analysis.ipynb
config/: earth_observation.json  gnc_demo.json  molniya.json  reflect_orbital.json  reflect_orbital_sweep.json  sso_j2_study.json  starlink_like.json
montecarlo/: altitude_drag_lifetime.json  starlink_sweep.json
src/: main.cpp
src/constellation/: Constellation.cpp  Constellation.h  Deployment.cpp  Deployment.h  Plane.cpp  Plane.h
src/core/: ConfigLoader.cpp  ConfigLoader.h  SimulationEngine.cpp  SimulationEngine.h  ThreadPool.h
src/core/math/: Constants.h  Quat.h  Vec3.h
src/environment/: AtmosphereModel.cpp  AtmosphereModel.h  EarthModel.h  EclipseModel.cpp  EclipseModel.h  MoonModel.cpp  MoonModel.h  SunModel.cpp  SunModel.h
src/gnc/: AttitudeController.cpp  AttitudeController.h  AttitudeDynamics.cpp  AttitudeDynamics.h  AttitudeState.h  FlightSoftwareStack.cpp  FlightSoftwareStack.h  Guidance.cpp  Guidance.h  MEKF.cpp  MEKF.h  WheelAllocator.cpp  WheelAllocator.h
src/gnc/sensors/: GPSModel.cpp  GPSModel.h  IMUModel.cpp  IMUModel.h  SensorMeasurements.h  StarTrackerModel.cpp  StarTrackerModel.h
src/metrics/: MetricsCollector.cpp  MetricsCollector.h
src/montecarlo/: ExperimentManager.cpp  ExperimentManager.h  ParameterSweep.cpp  ParameterSweep.h  SimulationBatch.cpp  SimulationBatch.h
src/orbit/: OrbitState.h  OrbitalElements.cpp  OrbitalElements.h  Propagator.cpp  Propagator.h  Satellite.cpp  Satellite.h
src/output/: CsvWriter.cpp  CsvWriter.h  OutputManager.cpp  OutputManager.h
src/physics/: AtmosphericDrag.cpp  AtmosphericDrag.h  ForceModel.h  Gravity.cpp  Gravity.h  J2Perturbation.cpp  J2Perturbation.h  SolarRadiationPressure.cpp  SolarRadiationPressure.h  ThirdBodyGravity.cpp  ThirdBodyGravity.h  ZonalHarmonics.cpp  ZonalHarmonics.h
src/viz/: FrameQueue.h  Renderer.cpp  Renderer.h  SatelliteRenderer.cpp  SatelliteRenderer.h  StateBuffer.h
